added aia.php and css

--- a/portalPage/index.html
+++ b/portalPage/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1 id="landingGreeting">Oconnalla Designs</h1>
-    <button id="landingPageButton"><a href="portal.html">Welcome &NonBreakingSpace; ></a></button>
+    <button id="landingPageButton"><a href="portal.php">Welcome &NonBreakingSpace; ></a></button>
 </body>
 </html>
