--- a/portalPage/portal.html
+++ b/portalPage/portal.html
@@ -34,7 +34,9 @@
             </div>
             <img id="devJoke" src="images/developerjoke.png" alt="Developer Joke">
             
-            <img id="officeNotebook" src="images/officeNotebook.jpg" alt="office Notebook">
+            <div id="notebookBorder"> 
+                <img id="officeNotebook" src="images/officeNotebook.jpg" alt="office Notebook">
+            </div>
         </div>
             <footer>2019 by Ariel OConnall, all rights reserved - Disclaimer - valid HTML, Valid CSS,       <a class="nav-links" href="contact.php">Contact Me</a>
             </footer>
